# allm

./: Cargo.toml  LICENSE  README.md  run_test.sh
src/: client.rs  config.rs  error.rs  failover.rs  lib.rs  request.rs
src/providers/: mistral.rs  mod.rs
tests/: integration_tests.rs  providers.json
