[package]
name = "allm"
version = "0.0.1"
edition = "2021"
authors = ["Steven E. Elliott <seeyallc6c@gmail.com>"]

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tokio-test = "0.4"